<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FonMain"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/s16">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/s24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/s32"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:text="@string/search"
            android:fontFamily="@font/ys_display_medium"
            app:icon="@drawable/lup"
            android:id="@+id/pos1"
            style="@style/Button"/>

        <Button
            android:text="@string/med"
            android:fontFamily="@font/ys_display_medium"
            app:icon="@drawable/med"
            android:id="@+id/pos2"
            style="@style/Button" />

        <Button
            android:text="@string/set"
            android:fontFamily="@font/ys_display_medium"
            app:icon="@drawable/setting"
            android:id="@+id/pos3"
            style="@style/Button"/>
    </LinearLayout>
</LinearLayout>
