<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FonSet"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context=".settings.ui.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/s24"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            style="@style/TextCondition2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:text="@string/set"
            android:textSize="@dimen/s22" />
    </LinearLayout>

    <LinearLayout
        style="@style/LinerSet"
        android:layout_marginTop="@dimen/s16"
        android:gravity="center_vertical">

        <TextView
            style="@style/TextCondition"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/s16"
            android:text="@string/them"
            android:textSize="@dimen/s16" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/my_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="18dp"


            app:thumbTint="@drawable/switch_thumb_color"
            app:trackTint="@drawable/switch_track_color"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>


    <LinearLayout
        style="@style/LinerSet"
        android:layout_marginTop="@dimen/s16"
        android:gravity="center_vertical">

        <TextView
            style="@style/TextCondition"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/s16"
            android:text="@string/share"
            android:textSize="@dimen/s16" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/share"
            style="@style/ButtonsSet"
            android:layout_gravity="center_vertical"
            app:icon="@drawable/share" />
    </LinearLayout>

    <LinearLayout
        style="@style/LinerSet"
        android:layout_marginTop="@dimen/s16"
        android:gravity="center_vertical">

        <TextView
            style="@style/TextCondition"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/s16"
            android:text="@string/write"
            android:textSize="@dimen/s16" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/writeSup"
            style="@style/ButtonsSet"
            android:layout_gravity="center_vertical"
            app:icon="@drawable/support" />
    </LinearLayout>

    <LinearLayout
        style="@style/LinerSet"
        android:layout_marginTop="@dimen/s16"
        android:gravity="center_vertical">

        <TextView
            style="@style/TextCondition"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/s16"
            android:text="@string/sogl"
            android:textSize="@dimen/s16" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/agreementButton"
            style="@style/ButtonsSet"
            android:layout_gravity="center_vertical"
            app:icon="@drawable/arrow"
            app:iconSize="@dimen/s32" />
    </LinearLayout>

</LinearLayout>
